<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:background="@android:color/white"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/profileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/profilimg_bg"
            android:contentDescription="@string/profileImage"
            android:maxHeight="100dip"
            android:onClick="changeProfileImage"
            android:scaleType="fitXY"
            android:src="@drawable/profilimg_default" />

        <EditText
            android:id="@+id/profileFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:hint="@string/profileFirstName"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/profileLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:hint="@string/profileLastName"
            android:inputType="textPersonName" >
        </EditText>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >
        </View>

        <EditText
            android:id="@+id/profileUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:hint="@string/profileUsername"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/profilePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:hint="@string/profilePassword"
            android:inputType="textPassword" >
        </EditText>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >
        </View>

        <EditText
            android:id="@+id/profileCompany"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:hint="@string/profileCompany"
            android:inputType="textPersonName" >
        </EditText>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seperator"
            android:src="@drawable/trenner_liste" />

        <EditText
            android:id="@+id/profileProfession"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:hint="@string/profileProfession"
            android:inputType="textPersonName" >
        </EditText>
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >
        </View>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/profileSex"
                android:textColor="#000000"
                android:textSize="@dimen/padding_large" />

            <Spinner
                android:id="@+id/profileSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:entries="@array/sex" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/profileAge"
                android:textColor="#000000"
                android:textSize="@dimen/padding_large" />

            <EditText
                android:id="@+id/profileAge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

</ScrollView>